Adding dark mode, PWA, and favicons

--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -4,8 +4,23 @@
   <meta charset="utf-8">
   <title>Canvas Stats</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="thumbnail" content="./assets/img/main.png" />
+    <meta property="og:title" content="Canvas Stats" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://therealmonte.github.io/" />
+    <meta property="og:image" content="./assets/img/main.png" />
+    <meta name="description" property="og:description" content="Statistics and images for the Canvas event">
+    <meta name="author" content="the_real_monte">
+    <meta name='mobile-web-app-capable' content='yes'>
+    <meta name='theme-color' content='#a630d2'>
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon-16x16.png">
+    <link rel='icon' sizes='192x192' href='./assets/img/android-chrome-192x192.png'>
+    <meta name='msapplication-square310x310logo' content='./assets/img/favicon-310x310.png'>
+    <link rel="manifest" href="./assets/site.webmanifest">
   <script src="https://kit.fontawesome.com/52202eaccb.js" crossorigin="anonymous"></script>
 </head>
 <body>
